# django-state-machine-demo

./: .gitignore  README.md  manage.py  pyproject.toml
django_state_machine_demo/: asgi.py  settings.py  wsgi.py
django_state_machine_demo/orders/: admin.py  apps.py  hooks.py  models.py  views.py
django_state_machine_demo/orders/migrations/: 0001_initial.py
django_state_machine_demo/utils/: enums.py
